Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1778,9 +1778,12 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  >> ("Hosts" atau "meng-hosting" berarti menyediakan Resources untuk Sytem lainnya)<br/>
 >>  >> (Pada kalimat diatas "Server meng-hosting API" artinya API disimpan didalam Server (API is Stored inside the Server))<br/>
 >>  >> <br/>
->>  >> -> Endpoint merupakan sebuah Spesifik URL (Uniform Resource Locator) di Server yang mewakili Spesifik Resource atau Action (yang mewakili Resource atau Action tertentu). <br/>
+>>  >> -> Endpoint merupakan sebuah Spesifik URL (Uniform Resource Locator) di Server yang mewakili Resource tertentu. <br/>
 >>  >> masing-masing Endpoint sesuai dengan Function atau Bagian Data tertentu pada API. <br/>  <br/>  <br/>
->>  >> 
+>>  >>
+>>  >> -> Pada REST API, Endpoint merupakan Spesifik URL yang menentukan dimana Client dapat meng-akses Resources tertentu. <br/>
+>>  >> contoh Spesifik URL adalah "/users" <br/> <br/>
+>>  >>
 >>  >> -> Cara kerja bagaimana "Endpoint" & "Server" berkerja sama :  <br/>
 >>  >>  <br/>
 >>  >> (1) Client membuat Request :  <br/>
