Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1793,6 +1793,33 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  >> , yang mana Endpoint tersebut adalah "/users")  <br/>
 >>  >> (Pada REST API, dalam sebuah Request hanya bisa berisi permintaan ke Satu Endpoint.  <br/>
 >>  >> yang mana ini berarti jika Client ingin mengirim permintaan ke Dua Endpoint, maka Client perlu membuat 'Dua Request terpisah' (two separate requests)).  <br/>
+>>  >> <br/>
+>>  >> 
+>>  >> (2) Server menerima & memproses Request : <br/>
+>>  >> Server mengecek Request apa yang diminta. <br/>
+>>  >> Dan Server mungkin perlu berinteraksi dengan Database. <br/>
+>>  >> Untuk sebuah Request GET ke Endpoint '/users', Endpoint tersebut bertindak sebagai "Entry Point" untuk Request ini. <br/>
+>>  >> <br/>
+>>  >> Saat Server menerima Request, Server memutuskan cara me-respond Request yang masuk berdasarkan URL(Endpoint) yang ditentukan dalam Request tersebut. <br/>
+>>  >> Jika Request nya adalah "GET/users" berarti URL(Endpoint) pada Request tersebut adalah "/users" yang berarti Server mengarahkan (memberi Rute atau Routing) >>  >> >>  >> pengambilan datanya ke "Endpoint Users". <br/>
+>>  >> <br/>
+>>  >> Server menangani Request yang masuk dengan mengarahkan Request tersebut ke "Endpoint Handler" yang tepat, <br/>
+>>  >> kemudian "Endpoint Handler" yang berinteraksi dengan Database untuk mengambil Data. <br/>
+>>  >> ("Endpoint Handler" merupakan Function atau bagiah Code yang bertanggung jawab untuk memproses Request ke Endpoint tertentu dalam Web Apllication atau API). <br/>
+>>  >> 
+>>  >> 		 	just info,
+>>  >> 			Contoh Routing Logic pada Javascript : 
+>>  >> 			
+>>  >> 			app.get('/users', getUsers);
+>>  >> 			[-] GET request ke Endpoint "/users", memicu (trigger) untuk menjalankan "getUsers" function.
+>>  >> 			
+>>  >> 			app.post('/users', createUsers);
+>>  >> 			[-] POST request ke Endpoint "/users" memicu (trigger) untuk menjalankan "createUsers" function.
+>>  >> 	
+>>  >> 
+>>  >> 
+>>  >> 
+>>  >> 
 >>  >> ^^ ^^
 >>
 >>  <br/>
