Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1817,8 +1817,11 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  >> 			[-] POST request ke Endpoint "/users" memicu (trigger) untuk menjalankan "createUsers" function.
 >>  >> 	
 >>  >> 
+>>  >> (3) Server mengirim Response : <br/>
+>>  >> Server mengirim Data ke Client beserta dengan Status Code (seperti 200 untuk OK, 404 untuk Not Found, dan sebagainya). <br/><br/>
 >>  >> 
->>  >> 
+>>  >> (4) Client menerima Response : <br/>
+>>  >> Client menerima Response dan dapat menampilkan Data. <br/>
 >>  >> 
 >>  >> ^^ ^^
 >>
