Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1823,8 +1823,13 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  >> (4) Client menerima Response : <br/>
 >>  >> Client menerima Response dan dapat menampilkan Data. <br/>
 >>  >> 
->>  >> ^^ ^^
->>
+>>  >> ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ ^^ <br/>
+>> <br/>
+>> (3) Client Combines Data: <br/>
+>> (Client menggabungkan Data) <br/>
+>> [-] Setelah menerima beberapa Response (berupa Data) dari kedua Endpoint, <br/>
+>> Client menggabungkan Data dari berbagai Response menjadi satu. <br/>
+>> 
 >>  <br/>
 >>  <br/>
 >>  <br/>
