Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1803,7 +1803,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  >> Untuk sebuah Request GET ke Endpoint '/users', Endpoint tersebut bertindak sebagai "Entry Point" untuk Request ini. <br/>
 >>  >> <br/>
 >>  >> Saat Server menerima Request, Server memutuskan cara me-respond Request yang masuk berdasarkan URL(Endpoint) yang ditentukan dalam Request tersebut. <br/>
->>  >> Jika Request nya adalah "GET/users" berarti URL(Endpoint) pada Request tersebut adalah "/users" yang berarti Server mengarahkan (memberi Rute atau Routing) >>  >> >>  >> pengambilan datanya ke "Endpoint Users". <br/>
+>>  >> Jika Request nya adalah "GET/users" berarti URL(Endpoint) pada Request tersebut adalah "/users" yang berarti Server mengarahkan (memberi Rute atau Routing) pengambilan datanya ke "Endpoint Users". <br/>
 >>  >> <br/>
 >>  >> Server menangani Request yang masuk dengan mengarahkan Request tersebut ke "Endpoint Handler" yang tepat, <br/>
 >>  >> kemudian "Endpoint Handler" yang berinteraksi dengan Database untuk mengambil Data. <br/>
