Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1830,9 +1830,9 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> (3) Client Combines Data: <br/>
 >> (Client menggabungkan Data) <br/>
 >> [-] Setelah menerima beberapa Response (berupa Data) dari kedua Endpoint, <br/>
->> Client menggabungkan Data dari berbagai Response menjadi satu. <br/>
->> <br/>
->> <br/>
+>> Client menggabungkan Data dari berbagai Response menjadi satu. <br/> <br/> <br/>
+>> 
+>> 
 >>  #### 2.2) The Inefficiency in REST API. <br/>
 >> ### (Ketidakefisienan pada REST API) <br/>
 >>
