Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1834,8 +1834,26 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> 
 >> 
 >>  #### 2.2) The Inefficiency in REST API. <br/>
->> ### (Ketidakefisienan pada REST API) <br/>
->>
+>> #### (Ketidakefisienan pada REST API) <br/> <br/>
+>> [1] Multiple Request : <br/>
+>> <br/>
+>> -> Maksud dari "Multiple Request" : <br/>
+>> [-] Pada REST API, setiap jenis data biasanya diakses dari Endpoint (URL) yang berbeda. <br/>
+>> Misalnya jika kita ingin request "Data User", "Data Orders", dan "Data Wishlist". <br/>
+>> karena kita meminta 3 jenis data berbeda yaitu data User, Order, dan Whistlist, <br/>
+>> maka kita perlu mengakses ke Tiga Endpoint berbeda, yaitu : <br/>
+>> (1) Endpoint "/user" <br/>
+>> (2) Endpoint "/orders" <br/>
+>> (3) Endpoint "/whishlist" <br/>
+>> Pada REST API, satu Request hanya bisa meng-akses ke Satu Endpoint, <br/>
+>> yang berarti Satu Request hanya bisa meminta Satu Jenis Data. <br/>
+>> Sehingga jika kita ingin meminta lebih dari satu jenis data, berarti kita harus Membuat "Lebih dari satu Request". <br/>
+>> <br/>
+>> [-] Sedangkan pada GraphQLAPI menggunakan "Single Endpoint" yaitu "/graphql" untuk semua jenis data. <br/>
+>> 
+>> 
+>> 
+>> 
 >> 
 >>  <br/>
 >>  <br/>
