Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1849,8 +1849,11 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> yang berarti Satu Request hanya bisa meminta Satu Jenis Data. <br/>
 >> Sehingga jika kita ingin meminta lebih dari satu jenis data, berarti kita harus Membuat "Lebih dari satu Request". <br/>
 >> <br/>
->> [-] Sedangkan pada GraphQLAPI menggunakan "Single Endpoint" yaitu "/graphql" untuk semua jenis data. <br/>
+>> [-] Sedangkan pada GraphQLAPI menggunakan "Single Endpoint" yaitu "/graphql" untuk semua jenis data. <br/>  <br/>
 >> 
+>> -> Pada REST API, Client harus membuat lebih dari satu Request (Multiple Request) untuk mendapatkan semua data yang dibutuhkan.  <br/>
+>> Setelah setiap request, Client harus menunggu Server untuk me-respond request yang pertama, sebelum Client dapat menerima Respond untuk Request yang setelahnya.  <br/>
+>> yang mana proses ini menambah Waktu dan Kompleksitas, sehingga dapat menyebabkan aplikasi terasa lebih lambat karena memproses Request secara berurutan.  <br/>
 >> 
 >> 
 >> 
