Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1854,9 +1854,20 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> -> Pada REST API, Client harus membuat lebih dari satu Request (Multiple Request) untuk mendapatkan semua data yang dibutuhkan.  <br/>
 >> Setelah setiap request, Client harus menunggu Server untuk me-respond request yang pertama, sebelum Client dapat menerima Respond untuk Request yang setelahnya.  <br/>
 >> yang mana proses ini menambah Waktu dan Kompleksitas, sehingga dapat menyebabkan aplikasi terasa lebih lambat karena memproses Request secara berurutan.  <br/>
->> 
->> 
->> 
+>>  <br/>
+>>  <br/>
+>> [2] Network Latency :  <br/>
+>> -> Setiap kali Client membuat Request ke Server, ada waktu yang dibutuhkan untuk memproses Request tersebut,  <br/>
+>> yang mana hal ini disebut Network Latency.  <br/>
+>> Jika Client harus melakukan Multiple Request untuk mendapatkan data yang dibutuhkan, hal ini dapat menambah Network Latency.  <br/>
+>> Sehingga dengan banyaknya Request dapat memperlambat aplikasi, apalagi jika terdapat Koneksi internet yang lambat  <br/>
+>> atau Aplikasi membutuhkan Data dari berbagai sumber (Multiple Sources).  <br/>
+>>  <br/>
+>> Aplikasi membutuhkan data dari berbagai sumber, dapat meningkatkan Network Latency, bukan hanya di REST API, tetapi juga di GraphQL,  <br/>
+>> karena terdapat "Round Trip Time" (RTT) yaitu waktu yang dibutuhkan Request untuk melakukan perjalanan dari Client ke Server dan kembali lagi ke Client.  <br/>
+>> Pada GraphQL, walaupun hanya membutuhkan Satu Request, tetapi Request tersebut butuh menarik data dari berbagai Data Source, sehingga menambah waktu perjalanan data >> >> (Round Trip Time).  <br/>
+>> Pada REST API, dibutuhkan Multiple Request untuk mengambil data dari berbagai sumber data (Multiple Data Sources), sehingga hal ini dapat menambah Waktu Perjalanan Data >> (Round Trip Time) serta menambah Waktu tunggu untuk memproses Multiple Request secara berurutan.  <br/>
+>>  <br/>
 >> 
 >>  <br/>
 >>  <br/>
