Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1868,7 +1868,17 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> Pada GraphQL, walaupun hanya membutuhkan Satu Request, tetapi Request tersebut butuh menarik data dari berbagai Data Source, sehingga menambah waktu perjalanan data >> >> (Round Trip Time).  <br/>
 >> Pada REST API, dibutuhkan Multiple Request untuk mengambil data dari berbagai sumber data (Multiple Data Sources), sehingga hal ini dapat menambah Waktu Perjalanan Data >> (Round Trip Time) serta menambah Waktu tunggu untuk memproses Multiple Request secara berurutan.  <br/>
 >>  <br/>
->> 
+>> <br/>
+>> [3] Data Overfetching :  <br/>
+>> (Pengambilan Data Berlebih)  <br/>
+>> -> Pada REST API, setaip Endpoint menngrimkan Response berupa "Fixed of Data" (Data yang sudah tetap),  <br/>
+>> Misalnya kita Request data mengenai User, tetapi hanya ingin melihat informasi 'Nama User' & 'Email User',  <br/>
+>> tetapi Data yang diterima Client adalah semua Informasi mengenai User, yaitu Nama, umur, alamat, email, dan Nomor Telfon.  <br/>
+>> inilah yang dimaksud dengan "Fixed Data" yaitu data yang dikirimkan adalah keseluruhan informasi, walaupun Kita hanya membutuhkan sebagian informasi.  >> <br/>
+>>  <br/>
+>> Karena Data yang dikirimkan berlebih daripada yang dibutuhkan, sehingga Ukuran Data menjadi berlebih,  <br/>
+>> yang mana hal ini dapat membuat Resource Bandwith terbuang secara mubazir.  <br/>
+>> (Bandwith merupakan Kapasitas maksimum jaringan untuk mentrasmisikan data).  <br/>  <br/>
 >>  <br/>
 >>  <br/>
 >>  <br/>
