Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1881,7 +1881,9 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  <br/>
 >>  <br/>
 >>  <br/>
+>> #### 2.2) Architecture of REST API <br/>
 >>
+>> 
 >> -------
 
 >>  ### {3} **REST API in GraphQL** <br/>
