Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1881,8 +1881,20 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  <br/>
 >>  <br/>
 >>  <br/>
->> #### 2.2) Architecture of REST API <br/>
->>
+>> #### 2.2) Architecture of REST API <br/> 
+>>   <br/>
+>> #### A) REST API Workflow Overview :  <br/>
+>> #### (Gambaran Alur Kerja REST API)  <br/>   <br/>
+>> 
+>> (1} Client :  <br/>
+>> Client itu merupakan Front-End Application yang membuat Request.  <br/>
+>> (Client itu seperti Orang yang meminta informasi)  <br/>
+>> Contoh Client itu seperti Web Browser yang dipakai oleh User untuk membuat Request.  <br/>
+>>  <br/>
+>> [2] Server :  <br/>
+>> Server merupakan tempat penyimpanan Data & Resources.  <br/>
+>> Saat Client meminta Data, Server lah yang mengambil data dari Database dan mengirim Data tersebut ke Client.  <br/>
+>>  
 >> 
 >> -------
 
