Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1881,8 +1881,8 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  <br/>
 >>  <br/>
 >>  <br/>
->> #### 2.2) Architecture of REST API <br/> 
->>   <br/>
+>> #### 2.2) Architecture of REST API <br/>  <br/>
+>> 
 >> #### A) REST API Workflow Overview :  <br/>
 >> #### (Gambaran Alur Kerja REST API)  <br/>   <br/>
 >> 
