Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1893,11 +1893,48 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  <br/>
 >> [2] Server :  <br/>
 >> Server merupakan tempat penyimpanan Data & Resources.  <br/>
->> Saat Client meminta Data, Server lah yang mengambil data dari Database dan mengirim Data tersebut ke Client.  <br/>
->>  
+>> Saat Client meminta Data, Server lah yang mengambil data dari Database dan mengirim Data tersebut ke Client.  <br/>v 
+>>   <br/>
+>> [3] Endpoints :  <br/>
+>> -> Endpoint merupakan Spesifik Address (URL) yang menentukkan dimana Data tertentu dapat diakses pada Server.  <br/>
+>>  <br/>
+>> -> Setiap Endpoint berhubungan dengan Data yang berbeda,  <br/>
+>> mirip seperti bagian-bagian dalam perpustakaan yang menyimpan kategori buku yang berbeda,  <br/>
+>> begitu juga dengan Endpoint, masing-masing Endpoint berhubungan dengan kategori data yang berbeda,  <br/>
+>> misalnya suatu Endpoint memiliki kategori data User, dan Endpoint yang satunya memiliki kategori data Order.  <br/>
+>>  <br/>
+>> -> Contoh Endpoint dengan analogi Library (Perpustakaan) :  <br/>
+>> Bayangkan sebuah Library yang kita bisa menemukan berbagai macam kategori buku,  <br/>
+>> seperti contoh berikut ini :  <br/>
+>>  <br/>
+>> [-] Fiction Section :  <br/>
+>> Pada Library, Section ini berisi buku dengan "Kategori Fiction", seperti Novel & buku cerita lainnya.  <br/>
+>>  <br/>
+>> Pada konteks REST API, Section ini merupakan Endpoint dengan kategori Fiction,  <br/>
+>> yang mana menujukkan Spesifik Address dimana Data Buku dengan Kategori Fiction dapat kita temukan.  <br/>
+>>  <br/>
+>> Contoh Endpoint untuk kategori Fiction :  <br/>
+>> ```
+>> https://api.library.com/books/fiction
+>> ```
+>> yang mana Endpoint ini merupakan Spesific Address (Alamat Khusus) tempat kita dapat menemukan Data Buku dengan Kategori Fiction.  <br/>  
+>> <br/>
+>> [-] Non-Fiction Section :   <br/>
+>> Pada Library, Section ini berisi buku dengan "Kategori Non-Fiction", seperti Buku Biografi, Buku Sejarah, dan Buku Self-improvement.  <br/>
+>> <br/>
+>> Pada konteks REST API, Section ini merupakan Endpoint dengan kategori Non-Fiction, <br/>
+>> yang mana menujukkan Spesifik Address dimana Data Buku dengan Kategori Non-Fiction dapat kita temukan. <br/>
+>> <br/>
+>> Contoh Endpoint untuk kategori Non-Fiction : <br/>
+>>  ```
+>>  https://api.library.com/books/non-fiction
+>>  ```
+>> yang mana Endpoint ini merupakan Spesific Address (Alamat Khusus) tempat kita dapat menemukan Data Buku dengan Kategori Non-Fiction.<br/>
+>> 
+>> 
 >> 
 >> -------
-
+>> 
 >>  ### {3} **REST API in GraphQL** <br/>
 >>
 >> 
