Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1893,7 +1893,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  <br/>
 >> [2] Server :  <br/>
 >> Server merupakan tempat penyimpanan Data & Resources.  <br/>
->> Saat Client meminta Data, Server lah yang mengambil data dari Database dan mengirim Data tersebut ke Client.  <br/>v 
+>> Saat Client meminta Data, Server lah yang mengambil data dari Database dan mengirim Data tersebut ke Client.  <br/>
 >>   <br/>
 >> [3] Endpoints :  <br/>
 >> -> Endpoint merupakan Spesifik Address (URL) yang menentukkan dimana Data tertentu dapat diakses pada Server.  <br/>
