Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1929,9 +1929,20 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >>  ```
 >>  https://api.library.com/books/non-fiction
 >>  ```
->> yang mana Endpoint ini merupakan Spesific Address (Alamat Khusus) tempat kita dapat menemukan Data Buku dengan Kategori Non-Fiction.<br/>
->> 
->> 
+>> yang mana Endpoint ini merupakan Spesific Address (Alamat Khusus) tempat kita dapat menemukan Data Buku dengan Kategori Non-Fiction. <br/>
+>>  <br/>
+>> [4] HTTP Methods :  <br/>
+>> -> REST API menggunakan "HTTP metods" seperti "GET", "POST", "PUT", dan "DELETE" untuk menentukkan tindakan yang perlu diambil pada setiap Endpoint. <br/>
+>> Maksudnya "untuk menentukkan tindakan yang perlu diambil pada setiap Endpoint" adalah bahwa HTTP Methods ini menentukkan jenis operasi yang ingin 
+>>  dilakukan Client pada Data Source. <br/>
+>> <br/>
+>> -> Berikut ini penjelasan "HTTP Methods" dan Jenis Operasi yang dilakukan : <br/>
+>> (1) GET = untuk Mengambil Data <br/>
+>> (tidak ada data yang  dimodifikasi karena hanya mengambil Data) <br/>
+>> (2) POST : untuk membuat Data Baru. <br/>
+>> (3) PUT = untuk meng-update Data <br/>
+>> (4) DELETE = untuk menghapus Data <br/> <br/>
+>>
 >> 
 >> -------
 >> 
