Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1941,7 +1941,31 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> (tidak ada data yang  dimodifikasi karena hanya mengambil Data) <br/>
 >> (2) POST : untuk membuat Data Baru. <br/>
 >> (3) PUT = untuk meng-update Data <br/>
->> (4) DELETE = untuk menghapus Data <br/> <br/>
+>> (4) DELETE = untuk menghapus Data <br/> <br/> <br/>
+>>
+>> #### B) Langkah-langkah secara Ringkas Cara Kerja REST API :  <br/> <br/>
+>> 
+>> [1] Client makes a Request : <br/>
+>> (Client membuat Request) <br/>
+>> -> Client mengirim sebuah "HTTP Request" ke Server. <br/>
+>> <br/>
+>> [2] Server Processes The Request : <br/>
+>> (Server memproses Request) <br/>
+>> -> Server menerima Request, <br/>
+>> Dan Server mengecek tindakan apa yang perlu dilakukan (seperti Mengambil Data. Meng-update Data, atau Menghapus Data), <br/>
+>> Kemudian Server melakukan tindakan sesuai yang diminta oleh Request tersebut (seperti Mengambil Data pada Database, atau meng-update Data pada Database,  <br/>atau Menghapus Data pada Database). <br/>
+>> <br/>
+>> [3] Server Sends a Response : <br/>
+>> (Server mengirim Response) <br/>
+>> -> Server mengirim Data yang di-Request oleh Client. <br/>
+>> <br/>
+>> [4] Client Receives Response : <br/>
+>> (Client menerima Response) <br/>
+>> -> Client menerima Response (berupa Data) <br/>
+>>  <br/>  <br/>
+>> 
+>> #### C) Detailed Steps in REST API Workflow :   <br/>
+>> #### (Langkah-langkah Detail Cara Kerja REST API )  <br/>  <br/>
 >>
 >> 
 >> -------
