Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1943,8 +1943,8 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> (3) PUT = untuk meng-update Data <br/>
 >> (4) DELETE = untuk menghapus Data <br/> <br/> <br/>
 >>
->> #### B) Langkah-langkah secara Ringkas Cara Kerja REST API :  <br/> <br/>
->> 
+>> #### B) High-Level Workflow of of REST API :  <br/> <br/>
+>> #### (Langkah-langkah secara Ringkas Cara Kerja REST API)
 >> [1] Client makes a Request : <br/>
 >> (Client membuat Request) <br/>
 >> -> Client mengirim sebuah "HTTP Request" ke Server. <br/>
