Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1966,7 +1966,37 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> 
 >> #### C) Detailed Steps in REST API Workflow :   <br/>
 >> #### (Langkah-langkah Detail Cara Kerja REST API )  <br/>  <br/>
+>> 
+>> 
+>> Mari kita bahas Detail Langkah Cara Kerja REST API menggunakan Contoh Case saat Mobile App melakukan Request untuk mendapatkan Informasi.  <br/>
+>>  <br/>
+>> [1] Step 1 : Client Sends a Request :  <br/>
+>> (Client mengirimkan Request)  <br/>
+>> -> Misalnya Client membutuhkan Data, seperti "User Information" (berarti Client ingin mengambil Data User).  <br/>
+>>  <br/>
+>> -> Kemudian Client mengirimkan "HTTP Request" ke Spesifik Endpoint pada Server.  <br/>
+>> karena Data yang ingin diambil adalah Data User, maka HTTP Request dikirimkan ke "Endpoint User".  <br/>
+>> Misalnya Endpoint User adalah  `https://api.example.com/users/123`  <br/>
+>> ( `https://api.example.com/users/123` merupakan spesifik address yang menunjukkan Dimana Data User Dapat diaskes pada Server)  <br/>
+>>  <br/>
+>> -> untuk Request, kita gunakan HTTP Method "GET" untuk mengambil Data.  <br/>
+>> Contoh Request dengan HTTP METHOD "GET" : 
+>>	 ```
+>>	 GET https://api.example.com/users/123
+>>	 ```
+>> 
+>> -> Request dari Client ini juga mengandung "Headers" (seperti 'Authorization Tokens') dan "Parameters" (seperti Filtering atau Sorting).  <br/>
 >>
+>> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
+>> >> ^For your information^  <br/>
+>> >> ### {1} URL vs HTTP Request : Identify the difference and how to Read them.  <br/>
+>> >> ### (URL vs HTTP Request : Kenali Perbedaannya dan Pahami Cara Membacanya)  <br/>    <br/>
+>> >> 
+>> >> 
+>> >> ### {2} Header & Parameter in HTTP Request :   <br/>
+>> >>
+>> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+>> 
 >> 
 >> -------
 >> 
