Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1991,11 +1991,48 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> ^For your information^  <br/>
 >> >> ### {1} URL vs HTTP Request : Identify the difference and how to Read them.  <br/>
 >> >> ### (URL vs HTTP Request : Kenali Perbedaannya dan Pahami Cara Membacanya)  <br/>    <br/>
+>> >>
+>> >> [1] URL : <br/>
+>> >> **`https://api.example.com/users/123`** 
+>> >> <br/>
+>> >> ini merupakan URL yang memberikkan Spesific Address untuk Lokasi Data pada Server. <br/>
+>> >> <br/>
+>> >> Misalnya :  <br/>
+>> >> [-] **`https://api.example.com/users`** <br/>
+>> >> URL tersebut menunjukkan Spesific Address atau Lokasi tempat Data User disimpan pada Server. <br/>
+>> >> Karena pada URL tersebut terdapat Endpoint "/users" , sehingga URL tersebut menunjukkan Spesific Address untuk Data User. <br/>
+>> >> <br/>
+>> >> [-] **`https://api.example.com/users/123`** <br/>
+>> >> "/123" merupakan ID yang ingin dicari. <br/>
+>> >> Kalau pada konteks keseluruhan URL diadtas, berarti URL tersebut menujukkan Spesifik Address untuk Data User dengan ID 123. <br/>
+>> >> <br/>
+>> >> <br/>
+>> >> -> URL Explanation : <br/>
+>> >>(1) **`https://`** <br/>
+>> >> [-] ini merupakan "Protocol" yang digunakan untuk meng-akses Data. <br/>
+>> >> <br/>
+>> >>  [-] Protocol merupakan seperangkat aturan (Set of Rules) yang memberi tahu Cara Data harus dikirim melalui Internet antara Device kita dan Server. >> >> <br/>
+>> >> <br/>
+>> >> [-] "https://" merupakan kepanjangan dari "HyperText Transfer Protocol Secure". <br/>
+>> >> HTTPS itu mirip dengan HTTP, perbedaannya adalah HTTPS ditambahkan Security (HTTPS kepanjangan dari "HTTP Secure"). <br/>
+>> >> yang mana Pada HTTPS, Data yang dkirimkan di-enkripsi menggunakan "SSL"(Secure Socket Layer) atau "TLS" (Transport Layer Security). <br/>
+>> >> <br/>
+>> >> "SSL" dan "TLS" keduanya merupakan Cryptographic Protocol yang digunakan untuk mengamankan Komunikasi pada Jaringan Komputer, <br/>
+>> >> yang mana SSL dan TLS biasanya dgunakan untuk meng-Enkripsi Data yang dipertukarkan antara Client dan Server. <br/>
+>> >> <br/>
+>> >> Tanpa Enkripsi di HTTPS, Data yang dikrimkan berupa "Plain Text", yang berarti siapaun yang Menyadap Komunikasi (Intercept The Communication) dapat >> >> dengan mudah membaca dan memngubah (alter) informasi tersebut. <br/>
+>> >> Penyadapan Komunikasi ini seperti "Man-in-The-Middle Attack". <br/>
+>> >> Pada "Man-in-the-Middle Attack", Hacker menyadap komunikasi diantara Dua Pihak, yaitu Client (seperti Web Browser) dam Server, penyadapan ini tanpa >> >> diketahui Salah satu pihak. <br/>
+>> >> Setelah Hacker mempunyai akses ke Komunikasi, Hacker tersebut dapat melakukan monitor & modifikasi pada Data yang sedang dikirimkan. <br/>
+>> >> yang mana Hacker dapat Membaca Sensitive Information ( seperti Password & nomor kartu kredit ) <br/>
+>> >> atau Hacker dapat mengubah Data (seperti mengubah Jumlah Transaksi pada E-Banking) <br/>
+>> >> <br/>
 >> >> 
 >> >> 
 >> >> ### {2} Header & Parameter in HTTP Request :   <br/>
 >> >>
 >> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ <br/>
+>>
 >> 
 >> 
 >> -------
