Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2027,6 +2027,15 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> yang mana Hacker dapat Membaca Sensitive Information ( seperti Password & nomor kartu kredit ) <br/>
 >> >> atau Hacker dapat mengubah Data (seperti mengubah Jumlah Transaksi pada E-Banking) <br/>
 >> >> <br/>
+>> >> <br/>
+>> >> (2) `api.example.com`  <br/>
+>> >> ini merupakan Domain (alamat) yang menunjukkan dimana Data disimpan  <br/>
+>> >>  <br/>
+>> >> (3)  `/users/123`  <br/>
+>> >> merupakan Path ke Data tertentu.  <br/>
+>> >> "/users" ini menunujukkan ke "Endpoint User", yang berarti Kita menginginkan Data User.  <br/>
+>> >> "/123" ini menunjukkan Path ke Data User yang lebih spesifik , yang berarti Kita menginginkan Data User yang memiliki "ID = 123"  <br/>  <br/>
+>> >> 
 >> >> 
 >> >> 
 >> >> ### {2} Header & Parameter in HTTP Request :   <br/>
