Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2034,7 +2034,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> (3)  `/users/123`  <br/>
 >> >> merupakan Path ke Data tertentu.  <br/>
 >> >> "/users" ini menunujukkan ke "Endpoint User", yang berarti Kita menginginkan Data User.  <br/>
->> >> "/123" ini menunjukkan Path ke Data User yang lebih spesifik , yang berarti Kita menginginkan Data User yang memiliki "ID = 123"  <br/>  <br/>
+>> >> "/123" ini menunjukkan Path ke Data User yang lebih spesifik , yang berarti Kita menginginkan Data User yang memiliki "ID 123"  <br/>  <br/>
 >> >> 
 >> >> 
 >> >> 
