Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1992,7 +1992,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> ### {1} URL vs HTTP Request : Identify the difference and how to Read them.  <br/>
 >> >> ### (URL vs HTTP Request : Kenali Perbedaannya dan Pahami Cara Membacanya)  <br/>    <br/>
 >> >>
->> >> [1] URL : <br/>
+>> >> #### [1] URL : <br/>
 >> >> **`https://api.example.com/users/123`** 
 >> >> <br/>
 >> >> ini merupakan URL yang memberikkan Spesific Address untuk Lokasi Data pada Server. <br/>
@@ -2036,6 +2036,8 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> "/users" ini menunujukkan ke "Endpoint User", yang berarti Kita menginginkan Data User.  <br/>
 >> >> "/123" ini menunjukkan Path ke Data User yang lebih spesifik , yang berarti Kita menginginkan Data User yang memiliki "ID 123"  <br/>  <br/>
 >> >> 
+>> >>  #### [2] HTTP Request :
+>> >>  `GET https://api.example.com/users/123`
 >> >> 
 >> >> 
 >> >> ### {2} Header & Parameter in HTTP Request :   <br/>
