Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2034,11 +2034,20 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> (3)  `/users/123`  <br/>
 >> >> merupakan Path ke Data tertentu.  <br/>
 >> >> "/users" ini menunujukkan ke "Endpoint User", yang berarti Kita menginginkan Data User.  <br/>
->> >> "/123" ini menunjukkan Path ke Data User yang lebih spesifik , yang berarti Kita menginginkan Data User yang memiliki "ID 123"  <br/>  <br/>
->> >> 
->> >>  #### [2] HTTP Request :
->> >>  `GET https://api.example.com/users/123`
->> >> 
+>> >> "/123" ini menunjukkan Path ke Data User yang lebih spesifik , yang berarti Kita menginginkan Data User yang memiliki "ID 123"  <br/>  <br/> <br/>
+>> >>  
+>> >>  #### [2] HTTP Request : <br/>
+>> >>  `GET https://api.example.com/users/123` <br/> 
+>> >>
+>> >> ini merupapakan HTTP Request. <br/>
+>> >> HTTP Request diatas mengatakan "Saya ingin mengambil Data dari URL ini". <br/>
+>> >> yang mana HTTP Request diatas berisi request "GET", yang berarti saya ingin mengambil data. <br/>
+>> >> <br/>
+>> >> [-] `GET` <br/>
+>> >> GET merupakan HTTP Method yang digunakan untuk mengambil data dari sebuah server. <br/>
+>> >> <br/>
+>> >> [-] `https://api.example.com/users/123` <br/> 
+>> >> ini merupakan URL yang menunjukkan Lokasi mengenai dimana Data yang mau kita ambil. <br/> <br/> <br/>
 >> >> 
 >> >> ### {2} Header & Parameter in HTTP Request :   <br/>
 >> >>
