Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2049,8 +2049,19 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> [-] `https://api.example.com/users/123` <br/> 
 >> >> ini merupakan URL yang menunjukkan Lokasi mengenai dimana Data yang mau kita ambil. <br/> <br/> <br/>
 >> >> 
->> >> ### {2} Header & Parameter in HTTP Request :   <br/>
->> >>
+>> >> ### {2} Header & Parameter in HTTP Request :   <br/> <br/>
+>> >> 
+>> >> -> Pada HTTP Request, "Header" dan "Parameter" merupakan informasi tambahan yang dikirim bersama Request untuk membantu Server memahami cara >> >> >> >> menangani Request. <br/> <br/>
+>> >> 
+>> >> ### A) HTTP Header <br/>
+>> >> -> "HTTP Header" atau yang biasa disebut "Header". <br/>
+>> >> -> "HTTP Header" merupakan bagian kecil dari Metadata atau Informasi yang dikirim bersama dengan "HTTP Request" atau "HTTP Response". <br/>
+>> >> -> Header tidak selalu mandatory (diwajibkan) pada setiap Request, tetapi Header sangan sering dikirimkan bersama Request, bahkan keberadaan Header >> >> sangat penting pada Request. <br/> 
+>> >> ("Metadata" disini berisi informasi yang memberi instruksi kepada Server atau Client mengenai cara memproses atau meng-handle Data) <br/> 
+>> >> <br/>
+>> >> -> Contoh HTTP Header : 
+>> >> 
+>> >> 
 >> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ <br/>
 >>
 >> 
