Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2051,7 +2051,7 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> 
 >> >> ### {2} Header & Parameter in HTTP Request :   <br/> <br/>
 >> >> 
->> >> -> Pada HTTP Request, "Header" dan "Parameter" merupakan informasi tambahan yang dikirim bersama Request untuk membantu Server memahami cara >> >> >> >> menangani Request. <br/> <br/>
+>> >> -> Pada HTTP Request, "Header" dan "Parameter" merupakan informasi tambahan yang dikirim bersama Request untuk membantu Server memahami cara >> >>  menangani Request. <br/> <br/>
 >> >> 
 >> >> ### A) HTTP Header <br/>
 >> >> -> "HTTP Header" atau yang biasa disebut "Header". <br/>
