Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2059,7 +2059,22 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >> -> Header tidak selalu mandatory (diwajibkan) pada setiap Request, tetapi Header sangan sering dikirimkan bersama Request, bahkan keberadaan Header >> >> sangat penting pada Request. <br/> 
 >> >> ("Metadata" disini berisi informasi yang memberi instruksi kepada Server atau Client mengenai cara memproses atau meng-handle Data) <br/> 
 >> >> <br/>
->> >> -> Contoh HTTP Header : 
+>> >> -> Contoh HTTP Header :  <br/>
+>> >>  (1) Authorization Header : <br/>
+>> >> -> Authorization merupakan Header yang paling saat menangani dengan Private Data atau Secure Data. <br/>
+>> >> <br/>
+>> >> -> "Authorization Header" mengandung Token (seperti Special Code) yang sering diberikan saat kita LogIn, <br/>
+>> >> yang mana Token memberitahu Server bahwa "User diperbolehkan untuk meng-akses data." <br/>
+>> >> <br/>
+>> >> -> Contoh "Authorization Header" : <br/>
+>> >> 
+>> >>   ```
+>> >>      Authorization: Bearer abcdef12345
+>> >>   ```
+>> >> Pada contoh diatas, "Bearer abcdef12345" merupakan Token yang membantu Server meng-identifikasi apakah kita adalah Authorized User (User yang berwenang). <br/>
+>> >> 
+>> >> 
+>> >> 
 >> >> 
 >> >> 
 >> >> ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ <br/>
