Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2071,9 +2071,27 @@ Setiap Remote Schema mewakili Area tertentu (misalnya, User Information, Payment
 >> >>   ```
 >> >>      Authorization: Bearer abcdef12345
 >> >>   ```
->> >> Pada contoh diatas, "Bearer abcdef12345" merupakan Token yang membantu Server meng-identifikasi apakah kita adalah Authorized User (User yang berwenang). <br/>
+>> >> Pada contoh diatas, "Bearer abcdef12345" merupakan Token yang membantu Server meng-identifikasi apakah kita adalah Authorized User (User yang berwenang). <br/> <br/>
 >> >> 
+>> >> (2) Content-Type Header :  <br/>
+>> >> -> ini memberi tahu Server mengenai Format Data yang dikirim oleh Request. <br/>
+>> >> Format Data tersebut seperti JSON, XML, dan lain sebagainya. <br/>
+>> >> <br/>
+>> >> Contoh : 
+>> >>   ```
+>> >>      Content-Type: application/json
+>> >>    ``` 
+>> >> Code diatas memberitahu Server bahwa Client mengrim data dalam bentuk JSON dan Data tersebut perlu di-interpretasikan dalam bentuk JSON. <br/> <br/>
 >> >> 
+>> >> -> `Content-Type` memberitahu Server Format Data yang Client kirimkan. <br/>
+>> >> `Content-Type` tidak memberitahu secara terang-terangan kalau Client menginginkan Server mengirimkan Response Data ke Client dalam format JSON, <br/>
+>> >> tetapi Client memberitahu Server secara tersirat bahwa Client menginginkan Response data dikirimkan dalam bentuk JSON. <br/>
+>> >> <br/>
+>> >> -> Jika Client ingin secara terang-terangan memberitahu bahwa Client menginginkan untuk menerima Response Data dari Server dalam format JSON, <br/>
+>> >> Client dapat menggunakan code 'Accept' . <br/>
+>> >> contoh : <br/>
+>> >> `Accept: application/json`
+>> >> <br/>
 >> >> 
 >> >> 
 >> >> 
